# BarcodeReader

./: README.md
BarcodeReaderDemo/: ReadMe.txt  StdAfx.cpp  StdAfx.h  barcodereader.rc  barcodereader.sln  barcodereader.vcproj  barcodereaderDlg.cpp  barcodereaderDlg.h  barcodereaderapp.cpp  barcodereaderapp.h  barcodereaderlib.h  main.cpp  resource.h
BarcodeReaderDemo/GUI/: MessageWindow.cpp  ParamCtrl.cpp  ParamCtrl.h  TCDC.cpp  TCDC.h  TCDC.inl  messagewindow.h
BarcodeReaderDemo/help/: BarcodeReader.chm
BarcodeReaderDemo/res/: barcodereader.rc2
OpenCV/_make/: Makefile.am  makefile.bcc  makefile.gcc  makefile.icl  makefile.vc  opencv.sln  opencv_directshow.dsw  opencv_directshow.sln
OpenCV/_make/cbuilderx/: cv.cbx  cvaux.cbx  cvsample.cbx  cvtest.cbx  cxcore.cbx  cxcoretest.cbx  cxts.cbx  highgui.cbx  opencv.bpgr  trs.cbx
OpenCV/apps/HaarTraining/: Makefile.am
OpenCV/apps/HaarTraining/src/: Makefile.am
OpenCV/cv/include/: Makefile.am  cv.h
OpenCV/cv/src/: Makefile.am  cv.dsp  cv.plg  cv.rc  cv.vcproj  cvmineval.cpp  cvprecorner.cpp  makefile.bcc  makefile.gcc  makefile.icl  makefile.vc
OpenCV/cvaux/include/: Makefile.am
OpenCV/cvaux/src/: Makefile.am  cvaux.dsp  cvaux.plg  cvaux.rc  cvaux.vcproj  makefile.bcc  makefile.gcc  makefile.icl  makefile.vc
OpenCV/cxcore/include/: Makefile.am
OpenCV/cxcore/src/: Makefile.am  cxcore.dsp  cxcore.plg  cxcore.rc  cxcore.vcproj  cxerror.cpp  cxpersistence.cpp  makefile.bcc  makefile.gcc  makefile.icl  makefile.vc
OpenCV/filters/CalibFilter/: Calib3DWindow.cpp  Calib3DWindow.h  CalibFilter.cpp  CalibFilter.def  CalibFilter.dsp  CalibFilter.h  CalibFilter.vcproj  CalibFilterProp.cpp  CalibFilterProp.h  CalibFilterUIDs.h  CalibFilterprop.rc  resource.h  (+1 more)
OpenCV/lib/: CVd.exp  HighGUId.exp  cv.exp  cvaux.exp  cvauxd.exp  cxcore.exp  cxcored.exp  cxts.exp  cxtsd.exp  highgui.exp  trs.exp  trsd.exp
OpenCV/otherlibs/: Makefile.am
OpenCV/otherlibs/cvcam/src/unix/: Makefile.am  convert.cpp  convert.h  cvvideo.cpp  cvvidtypes.h  dialogs.cpp  dialogs.h  icvvideo.h  render.cpp  render.h  videodev.h
OpenCV/utils/: cvt_xml2xml.py  dos2unix.py  gen_make.py  maintainer_clean.cmd  unix2dos.py
console/: BarcodeReader.dsp  BarcodeReader.vcproj  main.cpp
installer/WiX/: BarcodeReader.wsx  MyExitDialog.wxs  MyInstallDirDlg.wxs  MyWixUI_InstallDir.wxs  build.cmd  clean.cmd
qvcore/: BarcodeDecoder.cpp  BarcodeDecoder.h  BarcodeReader.cpp  BarcodeReader.h  EAN13BarcodeDecoder.cpp  EAN13BarcodeDecoder.h  coord_geom.cpp  coord_geom.h  framework.h
(+73 files in other folders)
